Add Save to redis Functionality and Update Integration Tests
